salesforce-main/src/main/default/objects/Address__c/Address__c.object-meta.xml
<CustomObject>
    <description>Used to store all address records related to a Student</description>
    <label>Address</label>
    <nameField>
        <displayFormat>ADD-{0}</displayFormat>
        <label>Address ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Addresses</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>