salesforce-main/src/main/default/objects/Address__c/fields/Accommodation_Type__c.field-meta.xml
<CustomField>
    <fullName>Accommodation_Type__c</fullName>
    <description>What type of accommodation is the address</description>
    <label>Accommodation Type</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Term_Time__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>01~Provider maintained property</fullName>
            </value>
            <value>
                <fullName>02~Parental/guardian home</fullName>
            </value>
            <value>
                <fullName>04~Own residence</fullName>
            </value>
            <value>
                <fullName>05~Other rented accommodation</fullName>
            </value>
            <value>
                <fullName>06~Private-sector halls</fullName>
            </value>
            <value>
                <fullName>07~Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>