salesforce-main/src/main/default/objects/Address__c/fields/Active__c.field-meta.xml
<CustomField>
    <fullName>Active__c</fullName>
    <defaultValue>true</defaultValue>
    <label>isActive</label>
    <type>Checkbox</type>
</CustomField>