salesforce-main/src/main/default/objects/Address__c/fields/County_State__c.field-meta.xml
<CustomField>
    <fullName>County_State__c</fullName>
    <label>County/State</label>
    <length>50</length>
    <type>Text</type>
</CustomField>