salesforce-main/src/main/default/objects/Address__c/fields/Delivery_Instructions__c.field-meta.xml
<CustomField>
    <fullName>Delivery_Instructions__c</fullName>
    <description>Instructions to delivery service e.g. how to gain entry to property / where to leave item</description>
    <label>Delivery Instructions</label>
    <type>TextArea</type>
</CustomField>