salesforce-main/src/main/default/objects/Address__c/fields/Lookup_Country__c.field-meta.xml
<CustomField>
    <fullName>Lookup_Country__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Country</label>
    <lookupFilter>
        <active>true</active>
        <errorMessage>The Country value you have selected is not a valid Nationality.</errorMessage>
        <filterItems>
            <field>country_list__c.Valid_Nationality__c</field>
            <operation>equals</operation>
            <value>True</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>country_list__c</referenceTo>
    <relationshipLabel>Student_Addresses</relationshipLabel>
    <relationshipName>Student_Addresses</relationshipName>
    <type>Lookup</type>
</CustomField>