salesforce-main/src/main/default/objects/Address__c/fields/Permanent_Home__c.field-meta.xml
<CustomField>
    <fullName>Permanent_Home__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This denotes if the address is the student&apos;s designated permanent home address</description>
    <label>Permanent Home?</label>
    <type>Checkbox</type>
</CustomField>