salesforce-main/src/main/default/objects/Address__c/fields/Primary__c.field-meta.xml
<CustomField>
    <fullName>Primary__c</fullName>
    <defaultValue>false</defaultValue>
    <label>isPrimary</label>
    <type>Checkbox</type>
</CustomField>