salesforce-main/src/main/default/objects/Address__c/fields/Primary_Billing__c.field-meta.xml
<CustomField>
    <fullName>Primary_Billing__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Primary Billing?</label>
    <type>Checkbox</type>
</CustomField>