salesforce-main/src/main/default/objects/Address__c/fields/Primary_Delivery__c.field-meta.xml
<CustomField>
    <fullName>Primary_Delivery__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Primary Delivery?</label>
    <type>Checkbox</type>
</CustomField>