salesforce-main/src/main/default/objects/Address__c/fields/Profile_Company_ID__c.field-meta.xml
<CustomField>
    <fullName>Profile_Company_ID__c</fullName>
    <description>Pulls the Profile Company Id value from the related Account. Useful for avoiding multiple unnecessary SOQL calls in the AddressTrigger.</description>
    <formula>Student__r.Profile_Company_ID__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Profile Company ID</label>
    <type>Text</type>
</CustomField>