salesforce-main/src/main/default/objects/Address__c/fields/Profile_Services_ID__c.field-meta.xml
<CustomField>
    <fullName>Profile_Services_ID__c</fullName>
    <description>Pulls the Profile Id value from either the related Account or Contact. Useful for avoiding multiple unnecessary SOQL calls in the AddressTrigger.</description>
    <formula>IF(
				NOT(ISBLANK(Student__r.PS_Profile_Services_ID__pc)),
				Student__r.PS_Profile_Services_ID__pc,
				IF(
								NOT(ISBLANK(Training_Manager__r.PS_Profile_Services_ID__c)),
								Training_Manager__r.PS_Profile_Services_ID__c,
								NULL
				)
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Profile Services ID</label>
    <type>Text</type>
</CustomField>