salesforce-main/src/main/default/objects/Address__c/fields/Record_Source__c.field-meta.xml
<CustomField>
    <fullName>Record_Source__c</fullName>
    <description>Indicates from what data source the record was created. &quot;Salesforce&quot; indicates a record that was manually entered.</description>
    <inlineHelpText>Indicates from what data source the record was created. &quot;Salesforce&quot; indicates a record that was manually entered.</inlineHelpText>
    <label>Record Source</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Salesforce</fullName>
                <default>true</default>
                <label>Salesforce</label>
            </value>
            <value>
                <fullName>Marketing Cloud</fullName>
            </value>
            <value>
                <fullName>Direct Apps</fullName>
            </value>
            <value>
                <fullName>CAB</fullName>
            </value>
            <value>
                <fullName>UCAS</fullName>
            </value>
            <value>
                <fullName>BARSAS</fullName>
            </value>
            <value>
                <fullName>eCommerce</fullName>
            </value>
            <value>
                <fullName>Hub</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>