salesforce-main/src/main/default/objects/Address__c/fields/Related_Record_Type_ID__c.field-meta.xml
<CustomField>
    <fullName>Related_Record_Type_ID__c</fullName>
    <description>Pulls the Record Type Id value from either the related Account or Contact. Useful for avoiding multiple unnecessary SOQL calls in the AddressTrigger.</description>
    <formula>IF(
	NOT(ISBLANK(Student__c)),
	CASESAFEID(Student__r.RecordTypeId),
	IF(
		NOT(ISBLANK(Training_Manager__c)),
		CASESAFEID(Training_Manager__r.RecordTypeId),
		NULL
	)
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Related Record Type ID</label>
    <type>Text</type>
</CustomField>