salesforce-main/src/main/default/objects/Address__c/fields/Street_1__c.field-meta.xml
<CustomField>
    <fullName>Street_1__c</fullName>
    <label>Address Line 1</label>
    <length>75</length>
    <type>Text</type>
</CustomField>