salesforce-main/src/main/default/objects/Address__c/fields/Street_2__c.field-meta.xml
<CustomField>
    <fullName>Street_2__c</fullName>
    <label>Address Line 2</label>
    <length>75</length>
    <type>Text</type>
</CustomField>