salesforce-main/src/main/default/objects/Address__c/fields/Street_3__c.field-meta.xml
<CustomField>
    <fullName>Street_3__c</fullName>
    <label>Address Line 3</label>
    <length>75</length>
    <type>Text</type>
</CustomField>