salesforce-main/src/main/default/objects/Address__c/fields/Term_Time__c.field-meta.xml
<CustomField>
    <fullName>Term_Time__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This denotes if the address is the students designated term time address</description>
    <label>Term Time?</label>
    <type>Checkbox</type>
</CustomField>