salesforce-main/src/main/default/objects/Address__c/fields/Text_Country__c.field-meta.xml
<CustomField>
    <fullName>Text_Country__c</fullName>
    <label>Text Country</label>
    <length>255</length>
    <type>Text</type>
</CustomField>