salesforce-main/src/main/default/objects/Address__c/fields/Training_Manager__c.field-meta.xml
<CustomField>
    <fullName>Training_Manager__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Training Manager</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Contact.RecordTypeId</field>
            <operation>equals</operation>
            <value>Training Manager</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Addresses</relationshipLabel>
    <relationshipName>Addresses</relationshipName>
    <type>Lookup</type>
</CustomField>